fixed z-index problem

--- a/stylesheets/_mixins.scss
+++ b/stylesheets/_mixins.scss
@@ -11,7 +11,7 @@
 	border-radius:50%;
 	background-color: white;
 	position: absolute;
-	z-index:1;
+	//z-index:1;
 	opacity: 0.5;
 	animation: blink_ 1s infinite alternate;
 }
