--- a/stylesheets/_shapes.scss
+++ b/stylesheets/_shapes.scss
@@ -15,6 +15,7 @@
 	width: $size2;
 	height: $size2;
 	border-radius:50%;
+	z-index: 1;
 	border: 1px solid white;
 	// animation: fadeIn 1s ease-in;
 }
